# ocaml-alloc-stats

./: .gitignore  Makefile  README.md  calculate_stats.ipynb  calculate_stats2.ipynb  calculate_stats3.ipynb  irmin-replay.ctf.dump  irmin-replay.dump  lifetimes.ipynb  main.ipynb
.docker/: Dockerfile  Makefile  README
alloc_many_large/: alloc_many_large.ctf  alloc_many_large.ctf.dump
benchmarks-menhir/: Makefile
benchmarks/alloc_many_large/: alloc_many_large.ml  dune
benchmarks/benchmarks-binarytrees/: Makefile  binarytrees5.ml  dune
benchmarks/benchmarks-menhir/: Makefile  output.txt
benchmarks/irmin-replay/: irmin-replay.ctf.dump
irmin/: irmin.ipynb
irmin-replay/: irmin-replay.ctf
memtrace-utils/: dune
old/: calculate_stats.ipynb  compute_stats.py
old/memtrace-utils/: dump.ml
