(library
 (name raw_shared)
 (modules Raw_shared)
 (libraries memtrace)) 

(library
 (name ondisk_format_with_lookahead)
 (modules Ondisk_format_with_lookahead)
 (libraries))

(executable
 (name translate_with_promote_lookahead)
 (modules Translate_with_promote_lookahead)
 (libraries memtrace ondisk_format_with_lookahead))

(executable
 (name dump)
 (modules Dump)
 (libraries memtrace raw_shared ondisk_format_with_lookahead))

